feat: add WCA world records leaderboard (#106)
